# Superscalar

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  SIGNET_GAPS.md  bitcoin-cli.sh  docker-compose.yml
.github/workflows/: ci.yml
docs/: analysis-test-coverage-and-signet-readiness.md  client-user-guide.md  demo-walkthrough.md  design-path-forward.md  design-production-roadmap.md  improving-the-demo.md  lsp-operator-guide.md  roadmap-next-9.md  testing-guide.md
fuzz/: fuzz_aead_decrypt.c  fuzz_hex_decode.c  fuzz_noise_handshake.c  fuzz_persist_load.c  fuzz_tx_sighash.c  fuzz_wire_parse_json.c  fuzz_wire_recv.c
include/superscalar/: adaptor.h  bridge.h  ceremony.h  channel.h  client.h  crypto_aead.h  dw_state.h  factory.h  fee.h  jit_channel.h  keyfile.h  ladder.h  lsp.h  lsp_channels.h  musig.h  noise.h  persist.h  regtest.h  report.h  sha256.h  shachain.h  tapscript.h  tor.h  tx_builder.h  types.h  watchtower.h  wire.h
src/: adaptor.c  bridge.c  ceremony.c  channel.c  client.c  crypto_aead.c  dw_state.c  factory.c  fee.c  jit_channel.c  keyfile.c  ladder.c  lsp.c  lsp_bridge.c  lsp_channels.c  lsp_demo.c  lsp_rotation.c  musig.c  noise.c  persist.c  regtest.c  report.c  shachain.c  tapscript.c  tor.c  tx_builder.c  util.c  watchtower.c  wire.c
tests/: test_adaptor.c  test_bridge.c  test_ceremony.c  test_channel.c  test_channels.c  test_client_watchtower.c  test_cpfp.c  test_daemon.c  test_dw_state.c  test_factory.c  test_jit.c  test_ladder.c  test_main.c  test_musig.c  test_persist.c  test_property.c  test_reconnect.c  test_regtest.c  test_shachain.c  test_tapscript.c  test_tx_builder.c  test_wire.c
tools/: .env.example  bitcoin-cli-wrapper.sh  check_wallets.sh  cln_plugin.py  dashboard.py  demo.sh  docker-entrypoint.sh  manual_demo.sh  require_regtest.sh  reset_regtest.sh  run_demo.sh  run_penalty_test.sh  run_tests.sh  run_unit_tests.sh  signet_diagnose.sh  signet_setup.sh  superscalar_bridge.c  superscalar_client.c  superscalar_lsp.c  test_bridge_regtest.sh  test_orchestrator.py  verify_all.sh
tools/deploy/: health_check.sh  start_bridge.sh  start_client.sh  start_lsp.sh  superscalar-bridge.service  superscalar-lsp.service
